fix(spin-java-module): derive --enable-preview for jlink CDS dump from mainClass's own bytecode